test/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: who-created-this
spec:
  background: false
  failurePolicy: Ignore
  rules:
  - name: who-created-this
    match:
      all:
        - resources:
            kinds:
            - "*"
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            test: "app"
