test/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test11
spec:
  containers:
  - name: nginx
    image: nginx:latest

---
apiVersion: v1
kind: Pod
metadata:
  name: test12
spec: 
  containers:
  - name: nginx
    image: nginx

---
apiVersion: v1
kind: Pod
metadata:
  name: test13
spec: 
  containers:
  - name: nginx
    image: nginx
